Change Item and Item form to have picture

--- a/app/views/items/index.html
+++ b/app/views/items/index.html
@@ -3,6 +3,7 @@
     <ul>
       <li>
         <h3><%= i.title %></h3>
+        <%= image_tag i.pic.url(:square) %> <br>
         <%= i.price %> <br>
         <%= i.desc %>
       </li>
