Add Image uploading to artist for pic_thumb and pic_main!

--- a/app/views/artists/index.html
+++ b/app/views/artists/index.html
@@ -2,7 +2,8 @@
   <% @artists.each do |a| %>
     <ul>
       <li><%= a.name %>
-      <%= image_tag(a.img_thumb, class:"img_thumb") %><br>
+      <%= image_tag(a.pic_thumb(:medium), class:"pic_thumb") %><br>
+      <%= image_tag(a.pic_main(:main), class:"pic_main") %><br>
       <%= a.bio %></li>
     </ul>
   <% end %>
