Add More image options to Article, and Artist

--- a/app/views/artists/index.html
+++ b/app/views/artists/index.html
@@ -3,7 +3,7 @@
     <ul>
       <li><%= a.name %>
       <%= image_tag(a.pic_thumb(:medium), class:"pic_thumb") %><br>
-      <%= image_tag(a.pic_main(:main), class:"pic_main") %><br>
+      <%= image_tag(a.pic_main(:large), class:"pic_main") %><br>
       <%= a.bio %></li>
     </ul>
   <% end %>
