--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -2,7 +2,7 @@
   <% @artists.each do |a| %>
     <ul>
       <li><%= a.name %>
-      <%= image_tag(a.img_thumb, class:"img_thumb") %><br>
+      <%= image_tag(a.pic_thumb, class:"pic_thumb") %><br>
       <%= a.bio %></li>
     </ul>
   <% end %>
