home page is functional and set up for jQuery

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,7 +10,6 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
  *= require foundation_and_overrides
 
@@ -26,3 +25,17 @@
 .size-48 { font-size: 48px; }
 .size-60 { font-size: 60px; }
 .size-72 { font-size: 72px; }
+
+
+@import 'foundation-icons';
+@import 'home';
+// @import "sticky-footer";
+
+// // Footer
+// @include sticky-footer(50px);
+footer {
+  margin-top: 0em;
+  background-color: black;
+  height: 52px;
+  color: white !important;
+}
