--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,9 +1,34 @@
-<div class="large-8 columns">
-  <% @artists.each do |a| %>
-    <ul>
-      <li><%= a.name %>
-      <%= image_tag(a.pic_thumb, class:"pic_thumb") %><br>
-      <%= a.bio %></li>
-    </ul>
-  <% end %>
+<div class="w-embed">
+
+  <video muted autoplay="" loop="" style="width:100%; height: auto; position:absolute; z-index: -1;">
+    <source src="<%= @video_ref %>" type="video/mp4">
+    <!-- <source src="http://syddev.com/jquery.videoBG/assets/tunnel_animation.ogv" type="application/ogg"> -->
+  </video>
+</div>
+
+<div class="row">
+  <div></div>
+  <div class="small-6 large-centered columns">
+    <div class="logo_title" id ="logo_title">
+      <a></a>SABES
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="logo_description">
+    <div class="large-1 large-centered columns">
+      <div class="artists">ARTISTS</div>
+
+      <div class="posts">POSTS</div>
+
+      <div class="about">ABOUT </div>
+    </div>
+  </div>
+</div>
+
+
+<div class ="row">
+  <div class="footer">
+  </div>
 </div>
