sticky footer only displays on home page

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,13 @@
+// @import "sticky-footer";
+
+// // Footer
+// @include sticky-footer(50px);
+footer {
+  margin-top: 0em;
+  background-color: black;
+  height: 52px;
+  color: white !important;
+}
 a {
   text-decoration: none !important;
   background-color: transparent;
