--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -28,7 +28,8 @@
 </div>
 
 
-<div class ="row">
-  <div class="footer">
-  </div>
-</div>
+
+ <footer id="footer", class="text-center">
+      By <%= link_to "Brian", "https://github.com/brimatteng", target: "_blank" %> & <%= link_to "Nick", "https://github.com/nnovak13", target: "_blank" %>
+    </footer>
+
