--- a/app/views/articles/index.html
+++ b/app/views/articles/index.html
@@ -1,11 +1,7 @@
-<div class="large-8 columns">
+<div class="large-12 columns">
   <% @articles.each do |a| %>
-    <ul>
-      <li>
-        <%= image_tag(a.pic(:large)) %>
-        <h3><%= a.title %></h3>
-        <%= a.body %>
-      </li>
-    </ul>
+    <%= image_tag(a.pic(:large)) %>
+    <h2><%= a.title %></h2>
+    <%= a.body %><br><br><br><br>
   <% end %>
 </div>
