--- a/app/views/articles/index.html
+++ b/app/views/articles/index.html
@@ -1,7 +1,11 @@
-<div class="large-12 columns">
-  <% @articles.each do |a| %>
-    <%= image_tag(a.pic(:large)) %>
-    <h2><%= a.title %></h2>
-    <%= a.body %><br><br><br><br>
-  <% end %>
+<div class="row">
+  <div class="large-1 columns">|</div>
+  <div class="large-10 columns">
+    <% @articles.each do |a| %>
+      <%= image_tag(a.pic(:large), class:"headerpic") %>
+      <h2><%= a.title %></h2>
+      <%= a.body %><br><br><br><br>
+    <% end %>
+  </div>
+  <div class="large-1 columns">|</div>
 </div>
